# github-user-languages-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yml
conf.d/: default.conf
src/: main.rs  models.rs  routes.rs
src/graphql/: query.graphql  schema.graphql
src/lib/: client.rs  languages.rs  mod.rs  models.rs  network.rs
