[package]
name = "github-language-percentages-webapi"
version = "0.1.0"
authors = ["ebina4yaka <4yaka3bina@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = { version = "0.4.5", features = ["json"] }
dotenv = "0.15.0"
graphql_client = "0.9.0"
serde_json = "1.0.57"
serde = { version = "1.0.115", features = ["derive"] }
envy = "0.4.1"
env_logger = "0.7.1"
reqwest = { version = "0.10.8" , features = ["blocking", "json"] }
anyhow = "1.0.32"
log = "0.4.11"
prettytable-rs = "0.8.0"
structopt = "0.3.17"
futures = "0.3.5"
tokio = "0.2.22"
