[package]
name = "github-languages-percentage-webapi"
version = "0.1.2"
authors = ["ebina4yaka <4yaka3bina@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
rocket_contrib = { version = "0.4.7", features = ["json"] }
dotenv = "0.15.0"
graphql_client = "0.9.0"
serde_json = "1.0.64"
serde = { version = "1.0.123", features = ["derive"] }
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
anyhow = "1.0.38"
rocket_cors = "0.5.2"
